--- a/app/assets/stylesheets/tweets.css.scss
+++ b/app/assets/stylesheets/tweets.css.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the tweets controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.tweet-box {
+  width: 250px;
+  height: 200px;
+  margin: 5px;
+  padding: 5px;
+  display: inline-block;
+}
+
+
