--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -1,4 +1,5 @@
 %h1 Tweets#index
 - @tweets.each do |tweet|
-  %h3
-    = auto_link(tweet)
+  .tweet-box
+    %h3
+      = auto_link(tweet, html: {target: 'blank'})
