Fix bugs in TwitterApiHelper methods.

--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -2,4 +2,4 @@
 - @tweets.each do |tweet|
   .tweet-box
     %h3
-      = auto_link(tweet, html: {target: 'blank'})
+      = auto_link(tweet.text, html: {target: 'blank'})
