--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!! 5
 %html
   %head
-    = favicon_link_tag 'favicon.ico'
+    / = favicon_link_tag 'favicon.ico'
     %title
       = yield(:title).empty? ? 'dev jobs tweets' : yield(:title)
     = stylesheet_link_tag 'application', :media => 'all'
