Fix errors in making hashtags; display tweeter avatar in index view.

--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -1,5 +1,6 @@
 %h1 Tweets#index
 - @tweets.each do |tweet|
   .tweet-box
+    = image_tag tweet.tweeter_avatar
     %h3
       = auto_link(tweet.text, html: {target: 'blank'})
