--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,7 +12,10 @@
  *= require_self
  */
 
+@import url(http://fonts.googleapis.com/css?family=Patrick+Hand);
+@import url(http://fonts.googleapis.com/css?family=Carrois+Gothic);
 @import 'bourbon';
 @import 'bitters/bitters';
 @import 'neat';
 @import 'tweets';
+@import 'partials/header';
