--- a/app/assets/stylesheets/bitters/_variables.scss
+++ b/app/assets/stylesheets/bitters/_variables.scss
@@ -5,7 +5,7 @@ $serif: $georgia;
 
 $base-font-family: $sans-serif;
 $header-font-family: $base-font-family;
-$headline-font-family: 'Patrick Hand', $sans-serif;
+$headline-font-family: 'Imprima', $sans-serif;
 $subheadline-font-family: 'Carrois Gothic', $sans-serif; 
 
 // Sizes
