--- a/app/views/tweets/_tweets.html.haml
+++ b/app/views/tweets/_tweets.html.haml
@@ -1,8 +1,9 @@
 - tweets.each do |tweet|
-  .tweet-box
-    %p
-      = image_tag tweet.tweeter_avatar
-      %span.tweeter-handle
+  .tweet-hex
+    .tweet-contents
+      .tweeter-avatar
+        = image_tag tweet.tweeter_avatar
+      .tweeter-handle
         = link_to tweet.tweeter_handle, tweet.tweeter_url
-    %p
-      = auto_link(tweet.text, html: {target: 'blank'})
+      .tweet-text
+        = auto_link(tweet.text, html: {target: 'blank'})
