--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -2,9 +2,12 @@
   %h1 DevJobs(?)Tweets
   %h5 *Updates hourly.
 #tweets-container
-  #friends-tweets
-    %h2.title From Following
-    = render partial: 'tweets', locals: {tweets: @friends_tweets}
-  #strangers-tweets
-    %h2.title From Searching
-    = render partial: 'tweets', locals: {tweets: @strangers_tweets}
+  - @tweets.each do |tweet|
+    .tweet-hex
+      .tweet-contents
+        .tweeter-avatar
+          = image_tag tweet.tweeter_avatar
+        .tweeter-handle
+          = link_to tweet.tweeter_handle, tweet.tweeter_url
+        .tweet-text
+          = auto_link(tweet.text, html: {target: 'blank'})
