Fix error in new tweet class assignment.

--- a/app/assets/stylesheets/tweets.css.scss
+++ b/app/assets/stylesheets/tweets.css.scss
@@ -63,7 +63,7 @@
     text-align: center;
     font-family: $subheadline-font-family;
   }
-  .tweet-hex-new {
+  .tweet-hex-new-tweet {
     @extend .tweet-hex;
     background-color: $new-tweet-color;
     &:before {
