Add age to tweets in index view.

--- a/app/assets/stylesheets/tweets.css.scss
+++ b/app/assets/stylesheets/tweets.css.scss
@@ -50,6 +50,10 @@
       font-weight: bold;
       text-align: center;
     }
+    .tweet-age {
+      font-style: italic;
+      text-align: center;
+    }
   }
 }
 
