Add color key to header in index view.

--- a/app/assets/stylesheets/bitters/_variables.scss
+++ b/app/assets/stylesheets/bitters/_variables.scss
@@ -31,7 +31,6 @@ $light-turquoise: #2FB9E8;
 $electric-green: #00E820;
 
 // Tweet Hex Colors
-
 $new-tweet-color: $goldenrod;
 $junior-color: $electric-green;
 
@@ -78,3 +77,6 @@ $form-font-family: $base-font-family;
 
 // Buttons
 $button-style: simple;
+
+// Header
+$header-margin: 60px;
