Tweak lack of guarantee notice.

--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -1,7 +1,7 @@
 #header
   %h1 DevJobs(?)Tweets
   %h5 *Updates hourly.
-  %h5 *No guarantee that any of the tweets below relate at all to web development or jobs (but, c'mon, they mostly do).
+  %h5 *No guarantee that any of the tweets below pertain at all to web development or jobs (but, c'mon, they mostly do), and an exhaustive search of Twitter is neither permitted nor possible.
   #color-key
     %h3 Color Key
     %span
