--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -2,6 +2,7 @@
   %h1 DevJobs(?)Tweets
   %h5 *Updates hourly.
   %h5 *No guarantee that any of the tweets below pertain at all to web development or jobs (but, c'mon, they mostly do), and an exhaustive search of Twitter is neither permitted nor possible.
+  %h5 *As a recent General Assembly graduate who is looking for a J-O-B and whose strongest language is ruby, this app primarily tries to precipitate junior ruby/rails web developer roles out from the twitterstrate.
   #color-key
     %h3 Color Key
     %span
