--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -2,43 +2,44 @@
   %h1 DevJobs(?)Tweets
   %h5 *Updates hourly.
   %h5 *No guarantee that any of the tweets below pertain at all to web development or jobs (but, c'mon, they mostly do), and an exhaustive search of Twitter is neither permitted nor possible.
-  %h5 *As a recent General Assembly graduate who is looking for a J-O-B and whose strongest language is ruby, this app primarily tries to precipitate junior ruby/rails web developer roles out from the twitterstrate.
+  %h5 *As a recent General Assembly graduate who is looking for a J-O-B and whose strongest language is ruby, this app primarily tries to precipitate junior ruby/rails web developer roles out from the twitterstrate (e.g., it filters or searches for tweets containing terms such as "junior", "ruby", and "rails").
   #color-key
     %h3 Color Key
-    %span
-      New
     .color-div#new
     %span
-      Mention Junior/Jr.
+      New
     .color-div#junior
     %span
-      From those I follow
+      Mention Junior/Jr.
     .color-div#by-friend-1
     .color-div#by-friend-2
     .color-div#by-friend-3
     %span
-      From searching (e.g., "web", "ruby", "developer", "designer", etc.)
+      From following
     .color-div#by-stranger-1
     .color-div#by-stranger-2
     .color-div#by-stranger-3
+    %span
+      From searching
   %br
   #filters-container
-    %h3 Filters and Top 10 Hashtags
-    %button{data: {filter: "*"}}
-      all
-    %button{data: {filter: "junior"}}
-      junior
-    %button{data: {filter: "new"}}
-      new
-    %button{data: {filter: "followed"}}
-      followed
-    %button{data: {filter: "searched"}}
-      searched
-    %button{data: {filter: "remote"}}
-      remote    
-    - @hashtags.each do |hashtag|
-      %button{data: {filter: "#{hashtag.text}"}}
-        = "##{hashtag.text}"
+    %h3 Filters (most frequent hashtags and other concerns)
+    #filter-buttons
+      %button{data: {filter: "*"}}
+        all
+      %button{data: {filter: "junior"}}
+        junior
+      %button{data: {filter: "new"}}
+        new
+      %button{data: {filter: "followed"}}
+        followed
+      %button{data: {filter: "searched"}}
+        searched
+      %button{data: {filter: "remote"}}
+        remote    
+      - @hashtags.each do |hashtag|
+        %button{data: {filter: "#{hashtag.text}"}}
+          = "##{hashtag.text}"
 #tweets-container
   - @tweets.each do |tweet|
     %div{class: "tweet-hex-#{tweet_hex_class(tweet)}"}
@@ -46,7 +47,7 @@
         .tweeter-avatar
           = image_tag tweet.tweeter_avatar
         .tweeter-handle
-          = link_to tweet.tweeter_handle, tweet.tweeter_url
+          = link_to tweet.tweeter_handle, tweet.tweeter_url, target: "blank"
         .tweet-text
           = auto_link(tweet.text, html: {target: 'blank'})
         .tweet-age
