Add active-button class for filter buttons; add js to swap toggle active-button class.

--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -25,7 +25,7 @@
   #filters-container
     %h3 Filters (most frequent useful hashtags and other concerns)
     #filter-buttons
-      %button{data: {filter: "*"}}
+      %button{class: "active-button", data: {filter: "*"}}
         all
       %button{data: {filter: ".junior"}}
         junior
