Reduce window for what counts as new tweets; add more language to header notices.

--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -3,6 +3,8 @@
   %h5 *Updates hourly.
   %h5 *No guarantee that any of the tweets below pertain at all to web development or jobs (but, c'mon, they mostly do), and an exhaustive search of Twitter is neither permitted nor possible.
   %h5 *As a recent General Assembly graduate who is looking for a J-O-B and whose strongest language is ruby, this app primarily tries to precipitate junior ruby/rails web developer roles out from the twitterstrate (e.g., it filters or searches for tweets containing terms such as "junior", "ruby", and "rails").
+  %h5 *There are too too too many records being obtained from searching (as opposed to following), so only displaying the most recent 300. Will add an "archive" view that is much simpler to display the remaining records.
+  %h5 *Lastly, this is not yet a mobile-friendly app. Soz. Coming soon! Jeez.
   #color-key
     %h3 Color Key
     .color-div#new
