--- a/app/assets/stylesheets/tweets.css.scss
+++ b/app/assets/stylesheets/tweets.css.scss
@@ -6,8 +6,7 @@
 .tweet-hex {
   width: 250px;
   height: 138px;
-/*  background: #77E8C2;
-*/  position: relative;
+  position: relative;
   margin: 70px 10px;
   display: inline-block;
   vertical-align: top;
