--- a/app/assets/stylesheets/partials/_header.css.scss
+++ b/app/assets/stylesheets/partials/_header.css.scss
@@ -1,59 +1,108 @@
 #header {
   @include span-columns(12);
   @include row(table);
-  h1 {
-    margin-left: $header-margin;
-    font-family: $headline-font-family;
-    color: $headline-color;
-  }
-  h5 {
-    margin-left: $header-margin;
-    margin-bottom: 10px;
-  }
-  span {
-    font-size: 20px;
-  }
-  h3 {
-    margin-bottom: 10px;
-  }
-  #color-key {
-    margin-top: 20px;
-    margin-left: $header-margin;
-    .color-div {
+  #headline {
+    @include span-columns(5 of 12);
+    text-align: center;
+    padding-top: 110px;
+    #headline-hex {
+      width: 400px;
+      height: 220px;
+      position: relative;
       display: inline-block;
-      width: 20px;
-      height: 20px;
-      vertical-align: top;
-      &#new {
-        background-color: $new-tweet-color;
+      background-color: $by-friend-1-color;
+      &:before {
+        content: "";
+        position: absolute;
+        top: -100px;
+        left: 0;
+        width: 0;
+        height: 0;
+        border-left: 200px solid transparent;
+        border-right: 200px solid transparent;
+        border-bottom: 100px solid $by-friend-1-color;
+        z-index: -1000;
       }
-      &#junior {
-        background-color: $junior-color;
+      &:after {
+        content: "";
+        position: absolute;
+        bottom: -100px;
+        left: 0;
+        width: 0;
+        height: 0;
+        border-left: 200px solid transparent;
+        border-right: 200px solid transparent;
+        border-top: 100px solid $by-friend-1-color;
+        z-index: -1000;
       }
-      &#by-friend-1 {
-        background-color: $by-friend-1-color;
-      }
-      &#by-friend-2 {
-        background-color: $by-friend-2-color;
-      }
-      &#by-friend-3 {
-        background-color: $by-friend-3-color;
-      }
-      &#by-stranger-3 {
-        background-color: $by-stranger-3-color;
-      }
-      &#by-stranger-2 {
-        background-color: $by-stranger-2-color;
-      }
-      &#by-stranger-1 {
-        background-color: $by-stranger-1-color;
+      #title {
+        width: 150px;
+        height: 150px;
+        padding-top: 20px;
+        padding-left: 10px;
+        margin: -20px auto;
+        border-radius: 10px;
+        background-color: #FFF;
+        font-family: $headline-font-family;
+        font-size: 35px;
+        color: $headline-color;
+        line-height: 1;
+        text-align: left;
       }
     }
   }
-  #filters-container {
-    margin-left: $header-margin;
-  }
-  .active-button {
-    color: blue;
+  #notices-etc {
+    @include span-columns(6 of 12);
+    vertical-align: top;
+    h5 {
+      margin-left: $header-margin;
+      margin-bottom: 10px;
+    }
+    span {
+      font-size: 20px;
+    }
+    h3 {
+      margin-bottom: 10px;
+    }
+    #color-key {
+      margin-top: 20px;
+      margin-left: $header-margin;
+      .color-div {
+        display: inline-block;
+        width: 20px;
+        height: 20px;
+        vertical-align: top;
+        &#new {
+          background-color: $new-tweet-color;
+        }
+        &#junior {
+          background-color: $junior-color;
+        }
+        &#by-friend-1 {
+          background-color: $by-friend-1-color;
+        }
+        &#by-friend-2 {
+          background-color: $by-friend-2-color;
+        }
+        &#by-friend-3 {
+          background-color: $by-friend-3-color;
+        }
+        &#by-stranger-3 {
+          background-color: $by-stranger-3-color;
+        }
+        &#by-stranger-2 {
+          background-color: $by-stranger-2-color;
+        }
+        &#by-stranger-1 {
+          background-color: $by-stranger-1-color;
+        }
+      }
+    }
+    #filters-container {
+      margin-left: $header-margin;
+    }
+    .active-button {
+      color: blue;
+    }
   }
 }
