--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,8 @@
     = favicon_link_tag 'devjobstweets-favicon.ico'
     %title
       = yield(:title).empty? ? 'Dev Jobs Tweets' : yield(:title)
+    %link{href: 'http://fonts.googleapis.com/css?family=Arvo:700', rel: 'stylesheet', type: 'text/css'}
+    %link{href: 'http://fonts.googleapis.com/css?family=Carrois+Gothic', rel: 'stylesheet', type: 'text/css'}
     = stylesheet_link_tag 'application', :media => 'all'
     = javascript_include_tag 'application'
     = csrf_meta_tags
