--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -1,47 +1,56 @@
 #header
-  %h1 DevJobs(?)Tweets
-  %h5 *Updates hourly.
-  %h5 *No guarantee that any of the tweets below pertain at all to web development or jobs (but, c'mon, they mostly do), and an exhaustive search of Twitter is neither permitted nor possible.
-  %h5 *As a recent General Assembly graduate who is looking for a J-O-B and whose strongest language is ruby, this app primarily tries to precipitate junior ruby/rails web developer roles out from the twitterstrate (e.g., it filters or searches for tweets containing terms such as "junior", "ruby", and "rails").
-  %h5 *There are too too too many records being obtained from searching (as opposed to following), so only displaying the most recent 300. Will add an "archive" view that is much simpler to display the remaining records.
-  %h5 *Lastly, this is not yet a mobile-friendly app. Soz. Coming soon! Jeez. ::Estelle Bluth-style winking::
-  #color-key
-    %h3 Color Key
-    .color-div#new
-    %span
-      New
-    .color-div#junior
-    %span
-      Mention Junior/Jr.
-    .color-div#by-friend-1
-    .color-div#by-friend-2
-    .color-div#by-friend-3
-    %span
-      From following
-    .color-div#by-stranger-1
-    .color-div#by-stranger-2
-    .color-div#by-stranger-3
-    %span
-      From searching
-  %br
-  #filters-container
-    %h3 Filters (most frequent useful hashtags and other concerns)
-    #filter-buttons
-      %button{class: "active-button", data: {filter: "*"}}
-        all
-      %button{data: {filter: ".junior"}}
-        junior
-      %button{data: {filter: ".new-tweet"}}
-        new
-      %button{data: {filter: ".followed"}}
-        followed
-      %button{data: {filter: ".searched"}}
-        searched
-      %button{data: {filter: ".remote"}}
-        remote    
-      - @hashtags.each do |hashtag|
-        %button{data: {filter: ".#{hashtag}"}}
-          = "##{hashtag}"
+  #headline
+    #headline-hex
+      #title
+        Dev
+        %br
+        Jobs(?)
+        %br
+        Tweets
+  #notices-etc
+    %h5 *Updates hourly.
+    %h5 *No guarantee that any of the  below pertain to dev jobs (but, c'mon, they mostly do)&#8212;an exhaustive search of Twitter is neither permitted nor possible.
+    %h5 *Search parameters emphasize junior ruby/rails roles (I need a J-O-B!).
+    %h5 *Below are the most recent 300 of all results (an archive listing of all is forthcoming), and favors results from following over those from searching.
+    %h5 *Lastly, this is not yet a mobile-friendly app. Soz. Coming soon! ::Estelle Bluth-style winking::
+    #color-key
+      %h3 Color Key
+      .color-div#new
+      %span
+        New
+      .color-div#junior
+      %span
+        Mention Junior/Jr.
+      %br
+      .color-div#by-friend-1
+      .color-div#by-friend-2
+      .color-div#by-friend-3
+      %span
+        From following
+      .color-div#by-stranger-1
+      .color-div#by-stranger-2
+      .color-div#by-stranger-3
+      %span
+        From searching
+    %br
+    #filters-container
+      %h3 Filters (most frequent useful hashtags and other concerns)
+      #filter-buttons
+        %button{class: "active-button", data: {filter: "*"}}
+          all
+        %button{data: {filter: ".junior"}}
+          junior
+        %button{data: {filter: ".new-tweet"}}
+          new
+        %button{data: {filter: ".followed"}}
+          followed
+        %button{data: {filter: ".searched"}}
+          searched
+        %button{data: {filter: ".remote"}}
+          remote    
+        - @hashtags.each do |hashtag|
+          %button{data: {filter: ".#{hashtag}"}}
+            = "##{hashtag}"
 #tweets-container
   - @tweets.each do |tweet|
     %div{class: "isotope-tweet tweet-hex-#{tweet_hex_main_class(tweet)} #{tweet_hex_filter_classes(tweet, @hashtags)}"}
