--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,5 +15,6 @@
 @import 'bourbon';
 @import 'bitters/bitters';
 @import 'neat';
+@import 'general';
 @import 'tweets';
 @import 'partials/header';
