Make responsive style changes.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,4 +17,5 @@
 @import 'neat';
 @import 'general';
 @import 'tweets';
-@import 'partials/header';
+@import 'filter_container';
+@import 'header';
