--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -9,10 +9,9 @@
         Tweets
   #notices-etc
     %h5 *Updates hourly.
-    %h5 *No guarantee that any of the  below pertain to dev jobs (but, c'mon, they mostly do)&#8212;an exhaustive search of Twitter is neither permitted nor possible.
-    %h5 *Search parameters emphasize junior ruby/rails roles (I need a J-O-B!).
-    %h5 *Below are the most recent 300 of all results (an archive listing of all is forthcoming), and favors results from following over those from searching.
-    %h5 *Lastly, this is not yet a mobile-friendly app. Soz. Coming soon! ::Estelle Bluth-style winking::
+    %h5.mobile-no-show *No guarantee that any of the  below pertain to dev jobs (but, c'mon, they mostly do)&#8212;an exhaustive search of Twitter is neither permitted nor possible.
+    %h5 *Search parameters emphasize junior ruby/rails roles
+    %h5.mobile-no-show *Below are the most recent 300 of all results (an archive listing of all is forthcoming), and favors results from following over those from searching.
     #color-key
       %h3 Color Key
       .color-div#new
