Further updates to style to make responsive on tablet and phone.

--- a/app/assets/stylesheets/bitters/_variables.scss
+++ b/app/assets/stylesheets/bitters/_variables.scss
@@ -82,3 +82,9 @@ $button-style: simple;
 
 // Header
 $header-margin: 60px;
+$header-margin-mobile: 20px;
+
+// Mobile Typography
+
+$mobile-font-size: $base-font-size * 0.65;
+$mobile-line-height: $mobile-font-size * 3;
