--- a/app/assets/stylesheets/bitters/_grid-settings.scss
+++ b/app/assets/stylesheets/bitters/_grid-settings.scss
@@ -9,8 +9,10 @@
 ///////////////////////////////////////////////////////////////////////////////
 $medium-screen: em(640);
 $large-screen: em(860);
+$mobile-screen: em(360);
 
 
 $medium-screen-up: new-breakpoint(min-width $medium-screen 4);
 $large-screen-up: new-breakpoint(min-width $large-screen 8);
 $large-screen-down: new-breakpoint(max-width $large-screen 12);
+$mobile-screen: new-breakpoint(max-width $mobile-screen 12);
