Tweak junior text in index view.

--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -21,7 +21,7 @@
       #color-key-junior.color-key-div
         .color-div#junior
         %span
-          Mention Junior/Jr.
+          Mention Junior/Jr/Internship
       %br#color-key-break
       #color-key-friend.color-key-div
         .color-div#by-friend-1
